--- a/assets/css/style-flex-grid.css
+++ b/assets/css/style-flex-grid.css
@@ -5,6 +5,13 @@
     padding: 0;
     
 } 
+        body{
+            background: #1D2B64;  /* fallback for old browsers */
+            background: -webkit-linear-gradient(to right, #F8CDDA, #1D2B64);  /* Chrome 10-25, Safari 5.1-6 */
+            background: linear-gradient(to right, #F8CDDA, #1D2B64); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
+
+
+        }
         .titulo{
             display: flex;
             justify-content: center;
@@ -16,6 +23,7 @@
 
         img{
             border: 2px solid #c8c8c8;
+            
         }
 
         .logoPadre{
@@ -39,8 +47,16 @@
             color: #ffff;
         }
 
+        header{
+            background: #ad5389;  /* fallback for old browsers */
+            background: -webkit-linear-gradient(to right, #3c1053, #ad5389);  /* Chrome 10-25, Safari 5.1-6 */
+            background: linear-gradient(to right, #3c1053, #ad5389);
+        }
+
         nav{
-            background-color: #c8c8c8
+            background: #ad5389;  /* fallback for old browsers */
+            background: -webkit-linear-gradient(to right, #3c1053, #ad5389);  /* Chrome 10-25, Safari 5.1-6 */
+            background: linear-gradient(to right, #3c1053, #ad5389);
         }
         
         nav a { 
@@ -62,10 +78,12 @@
 
         footer{
             text-align: center;
-            background-color: #c8c8c8;
+            background: #ad5389;  /* fallback for old browsers */
+            background: -webkit-linear-gradient(to right, #3c1053, #ad5389);  /* Chrome 10-25, Safari 5.1-6 */
+            background: linear-gradient(to right, #3c1053, #ad5389); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
             height: 100px;
             width: auto;
-                    
+            color: #FFFFFF;        
 
         }
 
@@ -74,9 +92,13 @@
 /* SmartPhone */
 
 @media (max-width: 480px){
+    img{
+        display: grid;
+            justify-self: center;
+    }
     body{
         height: 100vh;
-        background-color: #EAEAEA;
+        
     }
     /* .border{
         border:1px solid black;
@@ -134,7 +156,7 @@
 
     header{
         grid-area: header;
-        background-color: #c8c8c8;
+        
     }
 
     main{
@@ -149,7 +171,7 @@
     }
 
     nav{
-background-color: #c8c8c8
+
     }
 }
 p{
@@ -169,7 +191,7 @@ p{
 @media (min-width: 481px) and (max-width: 1023px) {
     body{
         height: 100vh;
-        background-color: #EAEAEA;
+        
     }
     /* .border{
         border:1px solid black;
@@ -225,19 +247,22 @@ p{
     
     header{
         grid-area: header;
-        background-color: #c8c8c8;
+        
     }
 
     main{
         grid-area: main;
+        width: 100%;
     }
 
     footer{
         grid-area: footer;
+        width: 100%;
+        height: auto;
     }
 
     nav{
-background-color: #c8c8c8
+
     }
     .media {
     width: 500px;
@@ -257,7 +282,7 @@ background-color: #c8c8c8
 @media (min-width: 1024px){
         body{
             height: 100vh;
-            background-color: #EAEAEA;
+            
         
         }
         /* .border{
@@ -310,7 +335,7 @@ background-color: #c8c8c8
 
         header{
             grid-area: header;
-            background-color: #c8c8c8;
+            
         }
 
         main{
@@ -326,7 +351,7 @@ background-color: #c8c8c8
             height: 400px;
         }
         nav{
-            background-color: #c8c8c8
+            
                 }
 
 }
