agregando cuadrado animado

--- a/assets/css/style-flex-grid.css
+++ b/assets/css/style-flex-grid.css
@@ -88,6 +88,76 @@
         }
 
 
+        .articleFlex{
+            display: flex;
+            flex-direction: column;
+            align-items: center;
+        }
+
+        .animacion{
+            animation-name: animacion;
+            animation-iteration-count: infinite;
+            animation-duration: 10s;
+        }
+        .tituloAnimado{
+            animation-name: tituloAnimado;
+         animation-iteration-count: 1 ; /* repeticiones  */
+         animation-duration: 5s;/* Duracion */
+        }
+        
+        @keyframes animacion{
+        0%{
+            transform: translate(-200px);
+            border-radius: 50%;
+            background-color: aqua;
+        }
+        30%{
+            border-radius: 10%;
+            background-color: antiquewhite;
+        }
+        50%{
+            border-radius: 0%;
+            background-color: azure;
+        }
+        75%{
+            transform: translateX(50vh);
+            border-radius: 10%;
+            background-color: red;
+        }
+        100%{
+            transform: translateX(-50vh);
+            transform: rotate(45deg);
+            border-radius: 50%;
+            background-color: tomato;
+        }
+        
+        }
+        
+        @keyframes tituloAnimado {
+            from{
+                transform: translate(-200px);
+                opacity: 0;
+            }
+        
+            
+            to {
+                transform: translate(0);
+                opacity: 1;
+            }
+        } 
+
+        .animado{
+            border: 1px solid black;
+            width: 100px;
+            height: 100px;
+            background-color: rgb(146, 24, 140);
+            margin-bottom: 100px;
+            margin-top: 100px;
+        
+        }
+        
+
+
 
 /* SmartPhone */
 
@@ -173,8 +243,7 @@
     nav{
 
     }
-}
-p{
+    p{
     width: 90%;
     font-size: 90%;
 }
@@ -185,6 +254,60 @@ p{
     width: 300px;
     height: 200px;
 }
+
+@keyframes animacion{
+    0%{
+        transform: translate(-100vh);
+        border-radius: 50%;
+        background-color: aqua;
+    }
+    30%{
+        border-radius: 10%;
+        background-color: antiquewhite;
+    }
+    50%{
+        border-radius: 0%;
+        background-color: azure;
+    }
+    75%{
+        transform: translateX(50vh);
+        border-radius: 10%;
+        background-color: red;
+    }
+    100%{
+        transform: translateX(-100vh);
+        transform: rotate(45deg);
+        border-radius: 50%;
+        background-color: tomato;
+    }
+    
+    }
+    
+    @keyframes tituloAnimado {
+        from{
+            transform: translate(-100px);
+            opacity: 0;
+        }
+    
+        
+        to {
+            transform: translate(0);
+            opacity: 1;
+        }
+    } 
+
+    .animado{
+        border: 1px solid black;
+        width: 100px;
+        height: 100px;
+        background-color: rgb(146, 24, 140);
+        margin-bottom: 100px;
+        margin-top: 100px;
+    
+    }
+
+}
+
 
 /* Mobile-Table */
 
@@ -278,6 +401,58 @@ p{
         width: 150px;
         height: 150px;
     }
+
+    @keyframes animacion{
+        0%{
+            transform: translate(-100vh);
+            border-radius: 50%;
+            background-color: aqua;
+        }
+        30%{
+            border-radius: 10%;
+            background-color: antiquewhite;
+        }
+        50%{
+            border-radius: 0%;
+            background-color: azure;
+        }
+        75%{
+            transform: translateX(50vh);
+            border-radius: 10%;
+            background-color: red;
+        }
+        100%{
+            transform: translateX(-100vh);
+            transform: rotate(45deg);
+            border-radius: 50%;
+            background-color: tomato;
+        }
+        
+        }
+        
+        @keyframes tituloAnimado {
+            from{
+                transform: translate(-100px);
+                opacity: 0;
+            }
+        
+            
+            to {
+                transform: translate(0);
+                opacity: 1;
+            }
+        } 
+    
+        .animado{
+            border: 1px solid black;
+            width: 100px;
+            height: 100px;
+            background-color: rgb(146, 24, 140);
+            margin-bottom: 100px;
+            margin-top: 100px;
+        
+        }
+
 }
 
 
@@ -363,5 +538,7 @@ p{
         nav{
             
                 }
+
+
 
 }
